# legal-emulator

./: .boring
BackEnd/: Assembly.hs  Emulator.h  Emulator.hs  EmulatorExtras.c  Motherboard.hs  Processor.hs  Test.hs  legal-emulator.cabal
BackEnd/Data/: FlattenedRecords.hs  Instances.hs
BackEnd/Data/Strict/: Maybe.hs
BackEnd/FileFormat/: INES.hs
BackEnd/Motherboard/: NES.hs
BackEnd/PPU/: PPU_NES.hs
BackEnd/Processor/: CPU6502.hs  CPU_6502.hs
BackEnd/Processor/Motorola/: CPU6502.hs  M6502.hs
DummyFrontEnd/: Main.hs  legal-emulator-dummy-front-end.cabal
FrontEnd/: AppDelegate.h  AppDelegate.m  GameView.h  GameView.m  Info.plist  Legal-Emulator.ai  Legal-Emulator.icns  Legal-Game.icns  Prefix.pch  main.m
FrontEnd/English.lproj/: MainMenu.xib
FrontEnd/Legal Emulator.xcodeproj/: dankna.mode1v3  dankna.pbxuser  project.pbxproj
FrontEnd/Legal Emulator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FrontEnd/Legal Emulator.xcodeproj/project.xcworkspace/xcuserdata/dankna.xcuserdatad/: UserInterfaceState.xcuserstate
FrontEnd/Legal Emulator.xcodeproj/xcuserdata/dankna.xcuserdatad/xcschemes/: Legal Emulator - Heap Profiling.xcscheme  Legal Emulator.xcscheme  xcschememanagement.plist
