name: legal-emulator
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: ../LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Game Infrastructure
synopsis: An emulation core library for the Nintendo Entertainment System.
description:
  This package provides the core to emulate the Nintendo Entertainment System
  (NES).

-- Library
--   exposed-modules: Motherboard,
--                    Motherboard.NES,
--                    Processor,
--                    Processor.Motorola.CPU6502
--   build-depends: base >= 4.1 && < 5


Executable test
  main-is: Test.hs
  other-modules: FileFormat.INES,
                 Motherboard.NES,
                 PPU.PPU_NES,
                 Processor.CPU_6502
  build-depends: base >= 4.1 && < 5,
                 array >= 0.3.0.2 && < 1,
                 bytestring >= 0.9.1.10 && < 1
