name: legal-emulator
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: ../LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Game Infrastructure
synopsis: An emulation core library for the Nintendo Entertainment System.
description:
  This package provides the core to emulate the Nintendo Entertainment System
  (NES).

Library
  exposed-modules: Emulator
  other-modules: Assembly,
                 Data.Instances,
                 Data.Strict.Maybe,
                 FileFormat.INES,
                 Motherboard.NES,
                 PPU.PPU_NES,
                 Processor.CPU_6502
  c-sources: EmulatorExtras.c
  build-depends: base >= 4.1 && < 5,
                 template-haskell >= 2.5.0.0 && < 3,
                 array >= 0.3.0.2 && < 1,
                 containers >= 0.4.0.0 && < 1,
                 bytestring >= 0.9.1.10 && < 1,
                 utf8-string >= 0.3.6 && < 1,
                 deepseq >= 1.1.0.2 && < 2,
                 mtl >= 2.0.1.0 && < 3
  ghc-options: -O2
  ghc-prof-options: -auto-all -caf-all
