name: legal-emulator-dummy-front-end
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: ../LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Game Infrastructure
synopsis: An emulation core library for the Nintendo Entertainment System.
description:
  This package provides the core to emulate the Nintendo Entertainment System
  (NES).

Executable legal-emulator
  main-is: Main.hs
  build-depends: base >= 4.1 && < 5,
                 legal-emulator >= 1.0 && < 2
  ghc-options: -O2
  ghc-prof-options: -auto-all -caf-all
